Make CmdFinder aware of toolbars